made website responsive

--- a/demo3.html
+++ b/demo3.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="demo3.css">
-    <title>Demo3</title>
+    <title>Demo3</title>                   
 </head>
 <body>
     <div class="background"></div>
@@ -16,8 +16,8 @@
         <form action="">
         <div class="formpage">
            <h5 style="font-size:15px; color:#d5d7da">START FOR FREE </h5>
-            <h1 style="font-size:60px ; color:#ffffff">Create new account<span style="color:#1c90f6 ;">.</span></h1>
-             <h5 style="font-size:15px; color:#d5d7da"> Alredy A Member? <span style="color:#1c90f6 ;">Log in</span> </h5>
+            <h1>Create new account<span style="color:#1c90f6 ;">.</span></h1>
+             <h5 style="font-size:15px; color:#d5d7da"> Alredy A Member? <span style="color:#1c90f6 ; cursor: pointer;">Log in</span> </h5>
              <div class="formname">
                <div class="namebox textbox-with-icon formatted-textbox"> 
                 <input type="text" class="textbox" placeholder="First name" >
